# ArcaneCodex

./: .commitlintrc.js  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_WIKI.md  CONTRIBUTING.md  README.md  SECURITY.md  check-state.ps1  install.cmd  package.json  start-claude.bat  test_out.txt  write_backup_rs.py
src-tauri/: Cargo.toml  analyze_encoding.py  build.rs  check_errors.json  check_output.txt  check_output2.txt  clippy.toml  fix-encoding.ps1  fix_encoding.py  fix_encoding2.py  fix_encoding3.py  fix_encoding4.py  fix_encoding5.py  fix_format_strings.py  rustfmt.toml  stderr.txt  tauri.conf.json  test_output.txt  test_output3.txt  test_output4.txt
src-tauri/.cargo/: config.toml
src-tauri/icons/: fix_icon.py
src-tauri/src/: main.rs
src-tauri/src/commands/: ai.rs  ai_core.rs  batch_ops.rs  calibration.rs  dedup.rs  error_patterns.rs  export.rs  file_monitor.rs  images.rs  inference_settings.rs  knowledge_graph.rs  mod.rs  narrative.rs  search.rs  seed_data.rs  settings.rs  tag_correction.rs  xmp.rs
src-tauri/src/core/: ai_queue.rs  bk_tree.rs  calibration.rs  circuit_breaker.rs  clip_embedder.rs  consistency_checker.rs  db.rs  dedup.rs  face_detector.rs  file_watcher.rs  image.rs  image_classifier.rs  inference.rs  knowledge_graph.rs  lm_studio.rs  mod.rs  onnx_runtime.rs  search_index.rs  vector_index.rs  xmp_service.rs
src-tauri/src/core/settings/: backup.rs  config.rs  mod.rs
src-tauri/src/models/: category.rs  image.rs  mod.rs  task.rs
src-tauri/src/utils/: crypto.rs  error.rs  hash.rs  log_sanitizer.rs  mod.rs
src-tauri/target-check/: .rustc_info.json
src-tauri/target-check/debug/.fingerprint/cfg-if-1a0efa2f7ffd8ced/: lib-cfg_if  lib-cfg_if.json
src-tauri/target-check/debug/.fingerprint/cfg-if-441a110518e8d3ab/: output-lib-cfg_if
src-tauri/target-check/debug/.fingerprint/cfg-if-629c1d630c69dcd6/: lib-cfg_if  lib-cfg_if.json
src-tauri/target-check/debug/.fingerprint/cfg-if-94bf4aa832a3e940/: output-lib-cfg_if
src-tauri/target-check/debug/.fingerprint/fastrand-e05c178bbdab4640/: lib-fastrand  lib-fastrand.json
src-tauri/target-check/debug/.fingerprint/find-msvc-tools-e4a0918b1bb4dce0/: output-lib-find_msvc_tools
src-tauri/target-local/: .rustc_info.json
src-tauri/tests/: crypto_test.rs  db_schema_test.rs  image_classifier_test.rs  knowledge_graph_test.rs  migration_test.rs  regression_test.rs
(+372 files in other folders)
