[package]
name = "arcane-codex"
version = "1.0.0-rc"
description = "Arcane Codex - Local-first AI Image Knowledge System"
authors = ["hyls9527"]
license = "MIT"
edition = "2021"
rust-version = "1.75"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# 图像处理
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "tiff", "gif", "ico", "bmp"] }
kamadak-exif = "0.5"

# 中文分词
jieba-rs = { version = "0.7", features = ["default"] }

# 错误处理
thiserror = "1"
anyhow = "1"
regex = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 文件系统
walkdir = "2"
sha2 = "0.10"
hex = "0.4"

# 并发
async-channel = "2"
async-trait = "0.1"

# 序列化
uuid = { version = "1", features = ["v4", "serde"] }

# ZIP (备份/恢复)
zip = "2"

# Base64 编码
data-encoding = "2"

# 加密 (API Key 保护)
aes-gcm = "0.10"
base64 = "0.22"
whoami = "1"
rand = "0.9"
pbkdf2 = { version = "0.13", features = ["hmac"] }
hmac = "0.12"

# 操作系统密钥环 (OS keyring)
keyring = "2"

# XMP 元数据互操作
xmpkit = "0.1"
xmp-writer = "0.3"

# 文件监控
notify = "7"

# AI 推理引擎 - ONNX Runtime
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "copy-dylibs"] }

# 系统信息（磁盘空间）
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winnt"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
mockito = "1"

[profile.dev]
opt-level = 1
incremental = false

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "arcane_codex"
path = "src/lib.rs"

[[bin]]
name = "arcane-codex"
path = "src/main.rs"
